added resume link

--- a/about.html
+++ b/about.html
@@ -16,7 +16,8 @@
     <nav>
         <ul>
 
-            <li><a href="./resume.html">Resume</a></li>
+            <li> 
+                <a href="https://docs.google.com/document/d/1WXGuS3nc76KaE9Jll_nn4jS_mr9zFWB4TfScXcbeBJU/edit?usp=sharing" target="_blank">Resume</a></li>
             <li><a href="./projects.html">Projects</a></li>
             <li><a href="./about.html">About</a></li>
             <div class="myDiv"></div>
@@ -39,7 +40,9 @@
     <h2 class="flexbox" id="clickResume">You can click here to view my resume</h2>
 </div>
     <div class="containerr">
-    <button class="clickMyResume">Resume</button>
+    <button class="clickMyResume" >
+    <a href="https://docs.google.com/document/d/1WXGuS3nc76KaE9Jll_nn4jS_mr9zFWB4TfScXcbeBJU/edit?usp=sharing" target="_blank">Resume</a>
+</button>
 </div>
 <br>
 <div>
