--- a/resume.html
+++ b/resume.html
@@ -27,8 +27,9 @@
         </nav>
         <hr>
 
+  
  <div class="container">
-            <img src="images/Resumeee.jpg"  id="resumee" alt="green and orange colors"> 
+            <img src="images/resumee.jpg"  id="resumee" alt="green and orange colors"> 
         </div>
 
 
