--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!-- Navbar begins -->
     <nav>
         <ul>
-            <li><a href="./resume.html">Resume</a></li>
+            <li> 
+            <a href="https://docs.google.com/document/d/1WXGuS3nc76KaE9Jll_nn4jS_mr9zFWB4TfScXcbeBJU/edit?usp=sharing" target="_blank">Resume</a></li>
             <li><a href="./projects.html">Projects</a></li>
             <li><a href="./about.html">About</a></li>
             <div class="myDiv">
