--- a/about.html
+++ b/about.html
@@ -35,7 +35,8 @@
     <div id="flexbox"><img id="aidaImg"src="images/AidaPhoto.png"alt="green, yellow, and coral shapes with an portrait image of a person in the middle"></div>
     <div class="flexbox" id="p1" >Prior to UX Design I’ve worked in the beauty industry and service industry.</div>
     <div class="flexbox" id="p2" >All my past experiences have involved working with people and providing them the best experience that they can encounter from changing their look to having a customer find the right product.</div>
-    <div class="flexbox" id="p3" > As a creative I’m passionate about user research and creating the most impactful user experiences</div>
+    <div class="flexbox" id="p3" > As a creative I’m passionate about user research and creating the most impactful user experiences and love the idea of creating products that can change someone's life for the better. 
+    </div>
     <div class="flexbox" id="p4" > As a human in an everyday world  I’m  sipping on an iced chai latte and exploring new small business cafes.</div>
     <h2 class="flexbox" id="clickResume">You can click here to view my resume</h2>
 </div>
